--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aaa-max-test",
+  "name": "aaa-cna-experiment",
   "version": "0.1.0",
-  "description": "A starter project for building a cloud native app (CNA) on top of Adobe I/O Runtime",
+  "description": "nothing to see here",
   "scripts": {
     "dev": "cross-env nodemon ./scripts/parcel.proxy.js",
     "build:ui": "cross-env NODE_ENV=production REMOTE_ACTIONS=true node scripts/build.ui.js",
@@ -26,9 +26,6 @@
   ],
   "author": "Adobe Inc",
   "license": "Apache-2.0",
-  "bugs": "https://github.com/adobe/adobeio-cna-starter-project/issues",
-  "repository": "adobe/adobeio-cna-starter-project",
-  "homepage": "https://github.com/adobe/adobeio-cna-starter-project",
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.1.0",
